# http-playground

./: Cargo.toml  README.md  prompt.md
src/: main.rs
static/: index.html
