[package]
name = "http-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = {version = "0.1.12", features = ["tokio"]}
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
